# Rust_Notes

./: .gitignore  Cargo.toml  notes.md
00-DataTypes-Variables/: .gitignore
00-DataTypes-Variables/src/: main.rs
01-Functions-And-Modules/: Cargo.toml
01-Functions-And-Modules/src/: helpers.rs  main.rs
02-Conditionals-And-ControlFlows/: Cargo.toml
02-Conditionals-And-ControlFlows/src/: main.rs
03-Closures/: Cargo.toml
03-Closures/src/: closures.rs  main.rs
04-Match-and-Patterns/: .gitignore  Cargo.toml
04-Match-and-Patterns/src/: main.rs  match_code.rs
05-Options-and-Enums/: Cargo.toml
05-Options-and-Enums/src/: main.rs  option_test.rs
06-Structs/src/: main.rs  test_mut_structs.rs  test_structs.rs  test_structs_methods.rs
07-Generics-and-traits/: .gitignore
07-Generics-and-traits/src/: main.rs  test_traits.rs
08-Vec-Types/: Cargo.toml
08-Vec-Types/src/: main.rs  test_vectors.rs
09-HashMaps-HashSet-Types/: Cargo.toml
09-HashMaps-HashSet-Types/src/: main.rs  test_hashmaps.rs  test_hashset.rs
10-useful-iter-methods/: Cargo.toml
10-useful-iter-methods/src/: main.rs  test_iter_methods.rs
11-Dynamic-Dispatch/: Cargo.toml
11-Dynamic-Dispatch/src/: main.rs  (+1 more)
12-Default-Trait/: Cargo.toml
13-Operator-Overloading/: Cargo.toml
14-Threads-Basics/: Cargo.toml
15-JSON-Data/: Cargo.toml
16-HTTP-Requests/: Cargo.toml
17-Async-Rust/: Cargo.toml
18-Async-Rust-Tokio/: Cargo.toml
19-Axum-basics/: .gitignore  Cargo.toml
19-Axum-basics/src/: main.rs  vehicle.rs
src/: ctx.rs  error.rs  main.rs  model.rs
tests/: quick_test.rs
(+16 files in other folders)
