[package]
name = "Axum"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.83"
axum = { version = "0.7.9" }
cargo-watch = "8.5.3"
httpc-test = "0.1.10"
lazy-regex = "3.4.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.6.2", features = ["fs"] }
