[package]
name = "axum_learning"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros", "http2", "ws"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["log", "async-await"] }
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v4"] }
